Smaller updates. Mostly  using e-card

--- a/src/MannsBlog/Views/Root/About.cshtml
+++ b/src/MannsBlog/Views/Root/About.cshtml
@@ -28,6 +28,16 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 @section scripts {
     <script src="~/lib/lodash/lodash.js"></script>
 }
+@section styles {
+    <style>
+        .e-card {
+            width: 550px;
+            margin: auto;
+            height: auto;
+        }
+    </style>
+}
+
 <div class="row">
     <div class="col-lg-3 hidden-sm-down">
         <img src="~/img/me/Sascha1.jpg" class="img-fluid img-rounded" alt="Sascha Manns" />
@@ -112,11 +122,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <h4 class="center-text">@_localizer["opensource"]</h4>
         <div class="" id="openSourceList">
         </div>
-        <style>
-            .e-card {
-                width: 550px;
-                margin: auto;
-            }
-        </style>
     </div>
 </div>
