--- a/src/MannsBlog/Views/Root/Contact.cshtml
+++ b/src/MannsBlog/Views/Root/Contact.cshtml
@@ -14,6 +14,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *@
+@*
+    Found on: https://www.aspsnippets.com/Articles/ASPNet-Core-Razor-Pages-Contact-Us-Form.aspx
+*@
 @page
 @using System.Net.Http
 @using Microsoft.Extensions.Configuration;
