--- a/src/MannsBlog/Views/Shared/_Layout.cshtml
+++ b/src/MannsBlog/Views/Shared/_Layout.cshtml
@@ -189,7 +189,7 @@
     <!-- Syncfusion ASP.NET Core controls scripts -->
     <script src="@syncScript"></script>
 
-    <partial name="_GoogleStructuredData" /></partial>
+    <partial name="_GoogleStructuredData" />
 
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -383,7 +383,7 @@
                     </div>
                     <p>@_localizer["content"] <a href="https://creativecommons.org/licenses/by-sa/3.0/de/deed.en"><img src="~/img/supporters/Logo_CC_by_SA.png" width="75" height="26" /></a></p>
                     <p class="copyright text-primary">
-                        @_localizer["built"] <a href="https://get.asp.net" target="_blank">.NET 6</a>, <a href="https://blazor.net/" target="_blank">Blazor/Razor</a>, <a href="https://github.com/aspnet/EntityFramework/" target="_blank">Entity Framework Core 7</a>, <a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a>, <a href="https://www.syncfusion.com/aspnet-core-ui-controls" target="_blank">Syncfusion ASP.NET Core UI Controls</a> , @_localizer["host"] <a href="http://azure.com/" target="_blank">Azure</a>.
+                        @_localizer["built"] <a href="https://get.asp.net" target="_blank">.NET 6</a>, <a href="https://blazor.net/" target="_blank">Blazor/Razor</a>, <a href="https://github.com/aspnet/EntityFramework/" target="_blank">Entity Framework Core 7</a>, <a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a>, <a href="https://www.syncfusion.com/aspnet-core-ui-controls" target="_blank">Syncfusion ASP.NET Core UI Controls</a>, <a href="https://blazorbootstrap.com" target="_blank">Blazor Bootstrap</a>, @_localizer["host"] <a href="http://azure.com/" target="_blank">Azure</a>.
                     </p>
                     <p>
                         <a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -397,7 +397,7 @@
         </div>
     </footer>
 
-    <partial name="_Info" />
+    @*<partial name="_Info" />*@
 
 
     <environment include="Development">
@@ -407,6 +407,13 @@
         <script src="~/lib/typeit/dist/index.umd.js"></script>
         <script src="~/lib/vanilla-lazyload/dist/lazyload.js"></script>
         <script src="~/lib/highlight.js/lib/core.js"></script>
+        <script src="~/lib/fortawesome/fontawesome-free/js/all.js"></script>
+        <script src="~/lib/codersrank/activity/codersrank-activity.js"></script>
+        <script src="~/lib/codersrank/education/codersrank-education.js"></script>
+        <script src="~/lib/codersrank/portfolio/codersrank-portfolio.js"></script>
+        <script src="~/lib/codersrank/skills-chart/codersrank-skills-chart.js"></script>
+        <script src="~/lib/codersrank/summary/codersrank-summary.js"></script>
+        <script src="~/lib/codersrank/work-experience/codersrank-work-experience.js"></script>
         <script src="~/js/clean-blog.js"></script>
         <script src="~/js/about.js"></script>
         <script src="~/js/audio.js"></script>
@@ -420,6 +427,13 @@
         <script src="~/lib/typeit/dist/index.umd.js"></script>
         <script src="~/lib/vanilla-lazyload/dist/lazyload.min.js"></script>
         <script src="~/lib/highlight.js/lib/core.js"></script>
+        <script src="~/lib/fortawesome/fontawesome-free/js/all.min.js"></script>
+        <script src="~/lib/codersrank/activity/codersrank-activity.min.js"></script>
+        <script src="~/lib/codersrank/education/codersrank-education.min.js"></script>
+        <script src="~/lib/codersrank/portfolio/codersrank-portfolio.min.js"></script>
+        <script src="~/lib/codersrank/skills-chart/codersrank-skills-chart.js"></script>
+        <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>
+        <script src="~/lib/codersrank/work-experience/codersrank-work-experience.min.js"></script>
         <script src="~/js/clean-blog.min.js"></script>
         <script src="~/js/about.min.js"></script>
         <script src="~/js/audio.min.js"></script>
@@ -448,7 +462,6 @@
         <script id="dsq-count-scr" src="https://@(_config["Disqus:BlogName"]).disqus.com/count.js" async></script>
     </environment>
     <script src="~/lib/cookieconsent/build/cookieconsent.min.js"></script>
-    <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>
     <!-- Syncfusion ASP.NET Core Script Manager -->
     <ejs-scripts></ejs-scripts>
     @RenderSection("Scripts", required: false)
