--- a/src/MannsBlog/Views/Root/CurriculumVitae.cshtml
+++ b/src/MannsBlog/Views/Root/CurriculumVitae.cshtml
@@ -62,7 +62,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             <div tabindex="0" class="e-card" id="basic">
                                 <div class="e-card-content">
                                     <div class="col-md-8">
-                                        <div class=""><span class="">@experience</span></div><div class="">@_localizer["about-year1"]<br> @_localizer["about-experience"]</div>
+                                        <div class="font-gray"><span class="">@experience</span></div><div class="font-gray">@_localizer["about-year1"]<br> @_localizer["about-experience"]</div>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <div class="intro">
         <div class="container">
             <h1>@_localizer["education-title"]</h1>
-            <codersrank-education username="saigkill" grid="true" education="true" certificates="true" certificates-link="true" education-section-title="Education" certificates-section-title="Certificates"></codersrank-education>
+            <codersrank-education username="saigkill" grid education certificates certificates-link education-section-title="Education" certificates-section-title="Certificates"></codersrank-education>
         </div>
     </div>
 </section>
