--- a/src/MannsBlog/Views/Shared/_Sidebar.cshtml
+++ b/src/MannsBlog/Views/Shared/_Sidebar.cshtml
@@ -61,126 +61,128 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <ul class="list-inline  sidebar-icon-list text-xs-center">
         <li class="list-inline-item">
             <a rel="me" href="https://social.linux.pizza/@@saigkill" title="Mastodon">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-mastodon fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.facebook.com/sascha.manns" title="Facebook">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-facebook-square fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://twitter.com/saigkill" title="Twitter">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://instagram.com/sascha.manns" title="Instagram">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/saigkill" title="LinkedIn">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" title="XING">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-xing fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://github.com/saigkill" title="GitHub">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://stackoverflow.com/users/7404985/sascha-manns" title="Stack Overflow">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-stack-overflow fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://dev.to/saigkill" title="Dev.to Community">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-dev fa-stack-1x fa-inverse" title="saigkill's DEV Profile"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.reddit.com/user/saigkill" title="Reddit">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-reddit-square fa-stack-1x fa-inverse" title="Reddit Profile"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://profile.codersrank.io/user/saigkill" title="Codersrank">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fas fa-code fa-stack-1x fa-inverse" title="Codersrank Profile"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.amazon.de/-/e/B07J3CPKR1" title="Amazon Author Page">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-amazon fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://steamcommunity.com/id/saigkill/" title="Steam">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-steam fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
         <li class="list-inline-item">
             <a href="https://www.last.fm/user/illuminatus1979" title="Last.fm">
-                <span class="fas fa-stack">
-                    <i class="fas fa-square fa-stack-2x"></i>
+                <span class="fa-stack fa-2x fa-hover-spin">
+                    <i class="fa-solid fa-square fa-stack-1x"></i>
                     <i class="fab fa-lastfm-square fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
         </li>
     </ul>
     <hr />
-    <div class="center-wo-minimize" id="gi" style="margin-top: 1em">
-        <a href="https://www.gi.de"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" /></a>
-    </div>
-    <div class="center-wo-minimize" id="opensuse" style="margin-top: 1em">
-        <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank"><img src="~/img/badges/memberbadge.png" width="70%" /></a>
-    </div>
-    <div class="center-wo-minimize" id="insider" style="margin-top: 1em">
-        <a href="https://insider.windows.com" target="_blank"><img src="~/img/markers/Insider.jpg" width="70%" /></a>
+    <div class="center-wo-minimize">
+        <div class="center-wo-minimize" id="gi" style="margin-top: 1em">
+            <a href="https://www.gi.de"><img id="gi" src="~/img/badges/mitglied.jpg" width="70%" /></a>
+        </div>
+        <div class="center-wo-minimize" id="opensuse" style="margin-top: 1em">
+            <a href="https://connect.opensuse.org/pg/profile/saigkill" target="_blank"><img src="~/img/badges/memberbadge.png" width="70%" /></a>
+        </div>
+        <div class="center-wo-minimize" id="insider" style="margin-top: 1em">
+            <a href="https://insider.windows.com" target="_blank"><img src="~/img/markers/Insider.jpg" width="70%" /></a>
+        </div>
     </div>
 </div>
 <hr />
