--- a/src/MannsBlog/Views/Shared/_Layout.cshtml
+++ b/src/MannsBlog/Views/Shared/_Layout.cshtml
@@ -154,34 +154,31 @@
     <title>@ViewBag.Title</title>
 
     <environment include="Development">
-        <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/lib/bootstrap-dark-5/dist/css/bootstrap-nightshade.css" rel="stylesheet" />
         <link href="~/lib/tether/dist/css/tether.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/fontawesome.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/solid.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/regular.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/brands.css" rel="stylesheet" />
+        <link href="~/css/bootstrap-dark-syncfusion/bootstrap5-dark.css" rel="stylesheet" />
         <link href="~/css/clean-blog.css" rel="stylesheet" />
         <link href="~/lib/cookieconsent/build/cookieconsent.min.css" rel="stylesheet" />
         <link href="~/lib/highlight.js/styles/default.css" rel="stylesheet" />
         <link href="~/css/fonts.css" rel="stylesheet" />
         <!-- Syncfusion Essential JS 2 Styles -->
         <link rel="stylesheet" href="@syncStyle" />
+        <link href="~/lib/fortawesome/fontawesome-free/css/all.css" rel="stylesheet" />
         <link href="~/css/site.css" rel="stylesheet" />
         @RenderSection("Styles", required: false)
     </environment>
     <environment exclude="Development">
-        <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+        @*<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />*@
+        <link href="~/lib/bootstrap-dark-5/dist/css/bootstrap-nightshade.min.css" rel="stylesheet" />
         <link href="~/lib/tether/dist/css/tether.min.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/fontawesome.min.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/solid.min.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/regular.min.css" rel="stylesheet" />
-        <link href="~/lib/fortawesome/fontawesome-free/css/brands.min.css" rel="stylesheet" />
+        <link href="~/css/bootstrap-dark-syncfusion/bootstrap5-dark.min.css" rel="stylesheet" />
         <link href="~/css/clean-blog.min.css" rel="stylesheet" />
         <link href="~/lib/cookieconsent/build/cookieconsent.min.css" rel="stylesheet" />
         <link href="~/lib/highlight.js/styles/default.css" rel="stylesheet" />
         <link href="~/css/fonts.min.css" rel="stylesheet" />
         <!-- Syncfusion Essential JS 2 Styles -->
         <link rel="stylesheet" href="@syncStyle" />
+        <link href="~/lib/fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
         <link href="~/css/site.min.css" rel="stylesheet" />
         @RenderSection("Styles", required: false)
     </environment>
@@ -217,7 +214,7 @@
     <!-- Set your background image for this header on the line below. -->
     @if (ViewBag.PageImage != null && !string.IsNullOrWhiteSpace(ViewBag.PageImage))
     {
-        <header class="intro-header" style="background-image: url('@ViewBag.PageImage')">
+        <header class="intro-header" style="background-image: url('@ViewBag.PageImage'); height: 400px;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-xl-12">
@@ -266,112 +263,112 @@
                     <ul class="list-inline">
                         <li class="list-inline-item">
                             <a rel="me" href="https://social.linux.pizza/@@saigkill" title="Mastodon">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-mastodon fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.facebook.com/sascha.manns" title="Facebook">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://twitter.com/saigkill" title="Twitter">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://instagram.com/sascha.manns" title="Instagram">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.linkedin.com/in/saigkill/" title="LinkedIn">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.xing.com/profile/SaschaZyroslawKyrill_Manns/cv" title="XING">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-xing fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://github.com/saigkill" title="GitHub">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://stackoverflow.com/users/7404985/sascha-manns" title="Stack Overflow">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-stack-overflow fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://dev.to/saigkill" title="Dev.to Community">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-dev fa-stack-1x fa-inverse" title="saigkill's DEV Profile"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.reddit.com/user/saigkill" title="Reddit">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-reddit fa-stack-1x fa-inverse" title="Reddit Profile"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://profile.codersrank.io/user/saigkill" title="Codersrank">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fas fa-code fa-stack-1x fa-inverse" title="Codersrank Profile"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.amazon.de/-/e/B07J3CPKR1" title="Amazon Author Page">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-amazon fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://steamcommunity.com/id/saigkill/" title="Steam">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-steam fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://www.last.fm/user/illuminatus1979" title="Last.fm">
-                                <span class="fa-stack fa-lg fa-hover-spin">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                <span class="fa-stack fa-2x fa-hover-spin">
+                                    <i class="fa-solid fa-circle fa-stack-1x"></i>
                                     <i class="fab fa-lastfm-square fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
@@ -383,7 +380,7 @@
                     </div>
                     <p>@_localizer["content"] <a href="https://creativecommons.org/licenses/by-sa/3.0/de/deed.en"><img src="~/img/supporters/Logo_CC_by_SA.png" width="75" height="26" /></a></p>
                     <p class="copyright text-primary">
-                        @_localizer["built"] <a href="https://get.asp.net" target="_blank">.NET 6</a>, <a href="https://blazor.net/" target="_blank">Blazor/Razor</a>, <a href="https://github.com/aspnet/EntityFramework/" target="_blank">Entity Framework Core 7</a>, <a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a>, <a href="https://www.syncfusion.com/aspnet-core-ui-controls" target="_blank">Syncfusion ASP.NET Core UI Controls</a>, <a href="https://blazorbootstrap.com" target="_blank">Blazor Bootstrap</a>, @_localizer["host"] <a href="http://azure.com/" target="_blank">Azure</a>.
+                        @_localizer["built"] <a href="https://get.asp.net" target="_blank">.NET 7</a>, <a href="https://blazor.net/" target="_blank">Blazor/Razor</a>, <a href="https://github.com/aspnet/EntityFramework/" target="_blank">Entity Framework Core 7</a>, <a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a>, <a href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a>, <a href="https://www.syncfusion.com/aspnet-core-ui-controls" target="_blank">Syncfusion ASP.NET Core UI Controls</a>, <a href="https://blazorbootstrap.com" target="_blank">Blazor Bootstrap</a>, @_localizer["host"] <a href="http://azure.com/" target="_blank">Azure</a>.
                     </p>
                     <p>
                         <a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -404,6 +401,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/tether/dist/js/tether.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/bootstrap-dark-5/dist/js/darkmode.js"></script>
+        <script src="~/css/bootstrap-dark-syncfusion/bootstrap5-dark.css"></script>
         <script src="~/lib/typeit/dist/index.umd.js"></script>
         <script src="~/lib/vanilla-lazyload/dist/lazyload.js"></script>
         <script src="~/lib/highlight.js/lib/core.js"></script>
@@ -415,7 +414,6 @@
         <script src="~/lib/codersrank/summary/codersrank-summary.js"></script>
         <script src="~/lib/codersrank/work-experience/codersrank-work-experience.js"></script>
         <script src="~/js/clean-blog.js"></script>
-        <script src="~/js/about.js"></script>
         <script src="~/js/audio.js"></script>
         <script src="~/js/@typeittargetdev"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
@@ -424,6 +422,8 @@
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/tether/dist/js/tether.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="~/lib/bootstrap-dark-5/dist/js/darkmode.min.js"></script>
+        <script src="~/css/bootstrap-dark-syncfusion/bootstrap5-dark.min.css"></script>
         <script src="~/lib/typeit/dist/index.umd.js"></script>
         <script src="~/lib/vanilla-lazyload/dist/lazyload.min.js"></script>
         <script src="~/lib/highlight.js/lib/core.js"></script>
@@ -435,7 +435,6 @@
         <script src="~/lib/codersrank/summary/codersrank-summary.min.js"></script>
         <script src="~/lib/codersrank/work-experience/codersrank-work-experience.min.js"></script>
         <script src="~/js/clean-blog.min.js"></script>
-        <script src="~/js/about.min.js"></script>
         <script src="~/js/audio.min.js"></script>
         <script src="~/js/@typeittargetprod"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
@@ -462,6 +461,11 @@
         <script id="dsq-count-scr" src="https://@(_config["Disqus:BlogName"]).disqus.com/count.js" async></script>
     </environment>
     <script src="~/lib/cookieconsent/build/cookieconsent.min.js"></script>
+    <script>
+        document.querySelector("#your-darkmode-button-id").onclick = function (e) {
+            darkmode.toggleDarkMode();
+        }
+    </script>
     <!-- Syncfusion ASP.NET Core Script Manager -->
     <ejs-scripts></ejs-scripts>
     @RenderSection("Scripts", required: false)
