--- a/src/MannsBlog/Views/Root/Contact.cshtml
+++ b/src/MannsBlog/Views/Root/Contact.cshtml
@@ -22,6 +22,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 *@
 @page
+@addTagHelper*, Microsoft.AspNetCore.Mvc.TagHelpers
 @using System.Net.Http
 @using Microsoft.Extensions.Configuration;
 @using Newtonsoft.Json.Linq
@@ -31,7 +32,7 @@ SOFTWARE.
 @using MannsBlog.Models
 @inject IConfiguration _config
 @inject IViewLocalizer _localizer
-@model MannsBlog.Views.Root.Contact
+@model MannsBlog.Views.Root.ContactModel
 
 @section styles {
     <link href="/css/contact.css" rel="stylesheet" />
